# HTTP-file-rep

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  stop.sh
http_file_rep/: __init__.py  runner.py  wsgi.py
http_file_rep/app/: __init__.py  views.py
http_file_repo/: app.py  files.py  values.py  wsgi.py
tests/: conftest.py  test_app.py  test_values.py
